# task-manager-api/routes/taskRoutes.js
@@ -1,11 +1,17 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const { getTasks, getTaskById, createTask, updateTask, deleteTask } = require('../controllers/taskController');
+const {
+  getTasks,
+  getTaskById,
+  createTask,
+  updateTask,
+  deleteTask,
+} = require("../controllers/taskController");
 
-router.get('/tasks', getTasks);
-router.get('/tasks/:id', getTaskById);
-router.post('/tasks', createTask);
-router.put('/tasks/:id', updateTask);
-router.delete('/tasks/:id', deleteTask);
+router.get("/tasks", getTasks);
+router.get("/tasks/:id", getTaskById);
+router.post("/tasks", createTask);
+router.put("/tasks/:id", updateTask);
+router.delete("/tasks/:id", deleteTask);
 
 module.exports = router;
