# task-manager-api/server.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const dotenv = require("dotenv");
 const taskRoutes = require("./routes/taskRoutes");
+const userRoutes = require("./routes/userRoutes");
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
 
@@ -8,14 +9,12 @@ dotenv.config();
 const app = express();
 app.use(express.json());
 
-// Connect to MongoDB
 const connectDB = require("./config/db");
 connectDB();
 
-// Routes
 app.use("/api", taskRoutes);
+app.use("/api", userRoutes);
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// Start server
 const PORT = process.env.PORT || 5000;
 app.listen(PORT, () => console.log(`Server running on port ${PORT}`));
